--- a/Portfolio.Web/Views/Category/Index.cshtml
+++ b/Portfolio.Web/Views/Category/Index.cshtml
@@ -2,25 +2,29 @@
 @{
     ViewData["Title"] = "Kategoriler";
     Layout = "~/Views/AdminLayout/Layout.cshtml";
+    int count = 0;
 }
 
 <table class="table table-bordered table-hover">
     <tr>
         <th>#</th>
+        <th>Kategori Id</th>
         <th>Kategori Adı</th>
         <th>İşlemler</th>
     </tr>
     @foreach (var item in Model)
     {
+        count++;
         <tr>
+            <th>@count</th>
             <td>@item.CategoryId</td>
             <td>@item.CategoryName</td>
             <td>
-                <a class="btn btn-outline-danger" href="#">Sil</a>
-                <a class="btn btn-outline-info" href="#">Güncelle</a>
+                <a class="btn btn-outline-danger" href="/Category/DeleteCategory/@item.CategoryId">Sil</a>
+                <a class="btn btn-outline-info" href="/Category/UpdateCategory/@item.CategoryId">Güncelle</a>
             </td>
         </tr>
     }
 </table>
 
-<a class="btn btn-outline-primary" href="#">Yeni Kategori</a>
+<a class="btn btn-outline-primary" href="/Category/CreateCategory">Yeni Kategori</a>
