--- a/Portfolio.Web/Views/Shared/Components/_AdminLayoutSidebarComponent/Default.cshtml
+++ b/Portfolio.Web/Views/Shared/Components/_AdminLayoutSidebarComponent/Default.cshtml
@@ -20,6 +20,12 @@
                         <span class="pc-mtext">Kategoriler</span>
                     </a>
                 </li>
+                <li class="pc-item">
+                    <a href="/Project/Index" class="pc-link">
+                        <span class="pc-micon"><i class="ti ti-package"></i></span>
+                        <span class="pc-mtext">Projeler</span>
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
